--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,3 @@
-plugins {
-
-id("com.android.application")
-
-  // Add the Google services Gradle plugin
-
-id("com.google.gms.google-services")
-
-...
-
-}
-
 allprojects {
     repositories {
         google()
@@ -29,23 +17,13 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
-apply plugin: 'com.android.application'
-// Add this line
-apply plugin: 'com.google.gms.google-services'
+plugins {
 
-dependencies {
-  // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:30.2.0')
-    // Import the Firebase BoM
+  // ...
 
-    implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
 
-  // TODO: Add the dependencies for Firebase products you want to use
+  // Add the dependency for the Google services Gradle plugin
 
-  // When using the BoM, don't specify versions in Firebase dependencies
+    id("com.google.gms.google-services") version "4.4.2" apply false
 
-  // https://firebase.google.com/docs/android/setup#available-libraries
-
-  // Add the dependencies for any other desired Firebase products
-  // https://firebase.google.com/docs/android/setup#available-libraries
 }
